# fontsentry

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  README.md  SECURITY.md  START_HERE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  monitor.yml
config/: rules.example.yaml  settings.example.yaml  targets.example.yaml
demo/: README.md  _generate_assets.py
demo/registry/: licenses.yaml
demo/sites/blog.example-demo.test/: index.html
demo/sites/blog.example-demo.test/css/: blog.css
demo/sites/example-demo.test/: about.html  index.html
demo/sites/example-demo.test/css/: site.css
demo/sites/example-shop.test/: index.html
demo/sites/example-shop.test/css/: shop.css
docs/: methodology.md  roadmap.md  rules.md
docs/adr/: 0001-stack-choice.md  0002-risk-scoring-model.md  0003-deterministic-verdicts.md  0004-spa-font-discovery.md
registry/: licenses.example.yaml
registry/proofs/: .gitkeep
src/fontsentry/: __init__.py  __main__.py  cli.py  config.py  csv_safety.py  demo.py  families.py  models.py  scan.py  source_scan.py  textutil.py  validation.py
src/fontsentry/crawl/: __init__.py  cache.py  ct.py  discovery.py  fetcher.py  netguard.py  robots.py
src/fontsentry/detect/: __init__.py  bundle.py  css.py  embedding.py  fontfile.py  html.py  page.py
src/fontsentry/registry/: __init__.py  catalog.py  portable.py  registry.py
src/fontsentry/report/: __init__.py  csv_report.py  diff.py  html_report.py  json_report.py
src/fontsentry/report/templates/: report.html.j2
src/fontsentry/risk/: __init__.py  engine.py  rules.py
src/fontsentry/web/: __init__.py  jobs.py  paths.py  scan_job.py  scheduler.py  schemas.py  server.py  workspace.py
tests/: conftest.py  factories.py  test_bundle.py  test_cli.py  test_config.py  test_crawl.py  test_css.py  test_ct.py  test_detection_accuracy.py  test_diff.py  test_docs.py  test_embedding.py  test_families.py  test_fontfile.py  test_gitignore.py  test_html.py  test_jobs.py  test_netguard.py  test_page.py  test_registry.py  test_registry_portable.py  test_report.py  test_risk_engine.py  test_rules.py  test_scan.py  test_scheduler.py  test_smoke.py  test_source_scan.py  test_suppression.py  test_textutil.py  test_validation.py  test_web_api.py  test_workspace.py
validation/: README.md  labels.example.yaml
web/: DESIGN_SYSTEM.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: Badge.tsx  Button.tsx  Card.tsx  Field.tsx  Modal.tsx  Select.tsx  Sidebar.tsx  Sparkline.tsx  Spinner.tsx  Tabs.tsx  TextInput.tsx  ThemeToggle.tsx  Toast.tsx
web/src/features/: AuditsScreen.tsx  BackupScreen.tsx  DiffView.tsx  DomainsView.tsx  Faq.tsx  FindingsTable.test.tsx  FindingsTable.tsx  GettingStarted.tsx  HowItWorks.tsx  OverviewScreen.tsx  RegistrySetup.tsx  RulesScreen.tsx  RunAuditModal.tsx  ScanControls.tsx  ScanProgress.tsx  ScheduleDialog.tsx  SetupSection.tsx  Stub.tsx  SummaryBar.tsx  SummaryCards.tsx  TargetsSetup.tsx  finding-detail.tsx
web/src/lib/: api.ts  cn.test.ts  cn.ts  findings.test.ts  findings.ts  importSummary.test.ts  importSummary.ts  privacy.test.ts  privacy.ts  url.test.ts  url.ts  useHashRoute.ts  useTheme.ts
web/src/styles/: index.css  tokens.css
